feat(java-spring): add security
